[package]
name = "py-rammer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pyrammer"
crate-type = ["cdylib"]

[dependencies]
rammer = "*"

[dependencies.cpython]
version = "0.7.0"
features = ["extension-module"]
